# cmake-robot

./: LICENSE  README.md  SUMMARY.md  book.json
chapters/: basics.md  testing.md
chapters/basics/: example.md  functions.md  programs.md  structure.md  variables.md
chapters/features/: debug.md  ides.md  modules.md
chapters/install/: exporting.md  installing.md
chapters/intro/: dodonot.md  installing.md  newcmake.md  running.md
chapters/projects/: fetch.md  submodule.md
chapters/testing/: googletest.md
examples/: CMakeLists.txt
examples/root-dict/: CMakeLists.txt
examples/root-simple/: CMakeLists.txt
examples/root-usefile/: CMakeLists.txt
examples/simple-project/: CMakeLists.txt
